--- a/.env
+++ b/.env
@@ -1,2 +1,1 @@
-SECRET_KEY=your_secret_key_here
-DATABASE_URL=sqlite:///crm.db
+DATABASE_URL=postgresql://postgres.lsxtdffskqyhawxubyhf:NT20O4Lpu4rRMteb@aws-1-eu-central-1.pooler.supabase.com:5432/postgres
