Switched to Nhost DB and fixed upload route

--- a/.env
+++ b/.env
@@ -1,1 +1,11 @@
-DATABASE_URL=postgresql://postgres.lsxtdffskqyhawxubyhf:NT20O4Lpu4rRMteb@aws-1-eu-central-1.pooler.supabase.com:5432/postgres
+# Database connection (Nhost Postgres)
+DATABASE_URL=postgresql://postgres:wYH4F3fhhgwEdC3T@otmbpjucylutmllrvxsh.db.eu-central-1.nhost.run:5432/otmbpjucylutmllrvxsh?sslmode=require
+
+# Flask secret key (for sessions & cookies)
+SECRET_KEY=K2NJRMAJTLSQ23VBD6SYSNMZFS34Y2GB
+
+# (Optional) Cloudinary settings for file uploads
+# Uncomment and fill these if you want images to be stored on Cloudinary
+# CLOUDINARY_CLOUD_NAME=your_cloud_name
+# CLOUDINARY_API_KEY=your_api_key
+# CLOUDINARY_API_SECRET=your_api_secret
