Added Cloudinary integration and Nhost DB config

--- a/.env
+++ b/.env
@@ -4,8 +4,7 @@ DATABASE_URL=postgresql://postgres:wYH4F3fhhgwEdC3T@otmbpjucylutmllrvxsh.db.eu-c
 # Flask secret key (for sessions & cookies)
 SECRET_KEY=K2NJRMAJTLSQ23VBD6SYSNMZFS34Y2GB
 
-# (Optional) Cloudinary settings for file uploads
-# Uncomment and fill these if you want images to be stored on Cloudinary
-# CLOUDINARY_CLOUD_NAME=your_cloud_name
-# CLOUDINARY_API_KEY=your_api_key
-# CLOUDINARY_API_SECRET=your_api_secret
+# Cloudinary settings for file uploads
+CLOUDINARY_CLOUD_NAME=dgj1mf0ca
+CLOUDINARY_API_KEY=688872972948856
+CLOUDINARY_API_SECRET=HQF4ljVl-zF4etc9Og0WZiYE1Tw
