Add nhost keep-alive + updated env

--- a/.env
+++ b/.env
@@ -8,3 +8,12 @@ SECRET_KEY=K2NJRMAJTLSQ23VBD6SYSNMZFS34Y2GB
 CLOUDINARY_CLOUD_NAME=dgj1mf0ca
 CLOUDINARY_API_KEY=688872972948856
 CLOUDINARY_API_SECRET=HQF4ljVl-zF4etc9Og0WZiYE1Tw
+
+# =========================================================
+# NHOST KEEP-ALIVE CONFIG (prevents Nhost sleeping)
+# =========================================================
+# Your Hasura GraphQL API endpoint
+NHOST_GRAPHQL=https://otmbpjucylutmllrvxsh.nhost.run/v1/graphql
+
+# The Admin Secret you set in Nhost dashboard → Settings → Secrets
+NHOST_ADMIN_SECRET=aE8dG3mF9qZpR7xYtNwL2sD4cH5vK1uJ
