--- a/requirements.txt
+++ b/requirements.txt
@@ -1,86 +1,19 @@
-alembic==1.16.5
-attrs==25.3.0
-Automat==25.4.16
-beautifulsoup4==4.13.5
-blinker==1.9.0
-certifi==2025.8.3
-cffi==1.17.1
-charset-normalizer==3.4.3
-click==8.3.0
-cloudinary==1.44.1
-colorama==0.4.6
-constantly==23.10.4
-cryptography==45.0.6
-cssselect==1.3.0
-defusedxml==0.7.1
-et_xmlfile==2.0.0
-filelock==3.19.1
-Flask==3.1.2
-Flask-Login==0.6.3
-Flask-Migrate==4.1.0
-Flask-SQLAlchemy==3.1.1
-greenlet==3.2.4
-gunicorn==23.0.0
-h11==0.16.0
-hyperlink==21.0.0
-idna==3.10
-ImageHash==4.3.2
-incremental==24.7.2
-itemadapter==0.12.1
-itemloaders==1.3.2
-itsdangerous==2.2.0
-Jinja2==3.1.6
-jmespath==1.0.1
-lxml==6.0.1
-Mako==1.3.10
-MarkupSafe==3.0.2
-numpy==2.3.2
-openpyxl==3.1.5
-outcome==1.3.0.post0
-packaging==25.0
-pandas==2.3.2
-parsel==1.10.0
-pillow==11.3.0
-Protego==0.5.0
-psycopg2-binary==2.9.10
-pyasn1==0.6.1
-pyasn1_modules==0.4.2
-pycparser==2.22
-PyDispatcher==2.0.7
-pyOpenSSL==25.1.0
-pyotp==2.9.0
-PySocks==1.7.1
-python-dateutil==2.9.0.post0
-python-dotenv==1.1.1
-pytz==2025.2
-PyWavelets==1.8.0
-queuelib==1.8.0
-reportlab==4.4.4
-requests==2.32.4
-requests-file==2.1.0
-scipy==1.16.0
-Scrapy==2.13.3
-selenium==4.35.0
-service-identity==24.2.0
-setuptools==80.9.0
-simplekml==1.3.6
-six==1.17.0
-sniffio==1.3.1
-sortedcontainers==2.4.0
-soupsieve==2.8
-SQLAlchemy==2.0.43
-tldextract==5.3.0
-tqdm==4.67.1
-trio==0.30.0
-trio-websocket==0.12.2
-Twisted==25.5.0
-typing_extensions==4.14.1
-tzdata==2025.2
-urllib3==2.5.0
-w3lib==2.3.1
-webdriver-manager==4.0.2
-websocket-client==1.8.0
-Werkzeug==3.1.3
-wheel==0.45.1
-wsproto==1.2.0
-zope.interface==7.2
+# --- Core web app ---
+Flask>=3.0,<4
+Flask-SQLAlchemy>=3.1,<4
+Flask-Login>=0.6,<1
+SQLAlchemy>=2.0,<2.1
+psycopg2-binary>=2.9,<3
+gunicorn>=21,<24
+
+# --- Utilities your app imports ---
+python-dotenv>=1.0,<2
+python-dateutil>=2.8,<3
+pyotp>=2.8,<3
+cloudinary>=1.41,<2
+requests>=2.31,<3
+
+# --- Optional exports (only if you use them) ---
+pandas>=2.2,<3
+openpyxl>=3.1,<4
+reportlab>=4.0,<5
